--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8"
   },
-  "homepage": "https://RayRedGoose.github.io/NPtracker",
+  "homepage": "https://RayRedGoose.github.io/NPTracker",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
